fix: transform animation safari

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -87,10 +87,10 @@
             svg{
                 display: block;
                 position: absolute;
-                top: 5px;
+                top: 3px;
                 right: 0;
                 width: 10px;
-                height: 6px;
+                height: 10px;
                 fill: $darkgreycolor;
                 transition: 300ms;
                 border-radius: 32px;
@@ -125,7 +125,7 @@
                     }
                     svg{
                         fill: $purplecolor;
-                        transform: rotateX(180deg);
+                        transform: rotate(180deg);
                     }
                     .submenu{
                         opacity: 1;
